fix: vertical scrollbar on incorrect container in the code preview

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -557,16 +557,19 @@ body:has(.modal-overlay) {
   border-radius: var(--br-md);
   width: 100%;
   overflow-x: auto;
-  max-height: 20rem;
   position: relative;
 }
 
 .modal__copy {
   position: absolute;
   top: 0.5em;
-  right: 1em;
+  right: 1.2em;
   z-index: 10;
   isolation: isolate;
+}
+
+.modal__copy:hover {
+  background: var(--bg-primary);
 }
 
 .modal__tags {
